@@ -931,6 +931,18 @@ current bankroll: 93
 hands played: 46
 initial bets: 46
 total bets: 52
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+unweighted, counted expected change: -0.814031 (/hand = -0.0176963)
+weighted, counted expected change: -0.814031 (/hand = -0.0176963)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.56135 (/hand = 0.0339424)
+weighted, uncounted expected change: 1.56135 (/hand = 0.0339424)
+unweighted, counted expected change: 1.47492 (/hand = 0.0320636)
+weighted, counted expected change: -0.814031 (/hand = 0.0320636)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
