@@ -945,6 +945,18 @@ current bankroll: 104
 hands played: 44
 initial bets: 44
 total bets: 53
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.578289 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.578289 (/hand = -0.0131429)
+unweighted, counted expected change: -0.349866 (/hand = -0.0079515)
+weighted, counted expected change: -0.349866 (/hand = -0.0079515)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 4.99255 (/hand = 0.113467)
+weighted, uncounted expected change: 4.99255 (/hand = 0.113467)
+unweighted, counted expected change: 4.88127 (/hand = 0.110938)
+weighted, counted expected change: -0.349866 (/hand = 0.110938)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
