@@ -953,6 +953,18 @@ current bankroll: 93.5
 hands played: 47
 initial bets: 47
 total bets: 48
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+unweighted, counted expected change: -1.25957 (/hand = -0.0267993)
+weighted, counted expected change: -1.25957 (/hand = -0.0267993)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 5.19923 (/hand = 0.110622)
+weighted, uncounted expected change: 5.19923 (/hand = 0.110622)
+unweighted, counted expected change: 4.26133 (/hand = 0.0906666)
+weighted, counted expected change: -1.25957 (/hand = 0.0906666)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
