@@ -916,6 +916,18 @@ current bankroll: 90
 hands played: 47
 initial bets: 47
 total bets: 50
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+unweighted, counted expected change: -0.679686 (/hand = -0.0144614)
+weighted, counted expected change: -0.679686 (/hand = -0.0144614)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.83624 (/hand = 0.0390689)
+weighted, uncounted expected change: 1.83624 (/hand = 0.0390689)
+unweighted, counted expected change: 1.86563 (/hand = 0.0396942)
+weighted, counted expected change: -0.679686 (/hand = 0.0396942)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
