@@ -935,6 +935,18 @@ current bankroll: 104
 hands played: 45
 initial bets: 45
 total bets: 48
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+unweighted, counted expected change: -0.989937 (/hand = -0.0219986)
+weighted, counted expected change: -0.989937 (/hand = -0.0219986)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.56029 (/hand = 0.0346731)
+weighted, uncounted expected change: 1.56029 (/hand = 0.0346731)
+unweighted, counted expected change: 1.20218 (/hand = 0.026715)
+weighted, counted expected change: -0.989937 (/hand = 0.026715)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
