@@ -943,6 +943,18 @@ current bankroll: 117
 hands played: 42
 initial bets: 42
 total bets: 53
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.552004 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.552004 (/hand = -0.0131429)
+unweighted, counted expected change: -0.232542 (/hand = -0.00553672)
+weighted, counted expected change: -0.232542 (/hand = -0.00553672)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.87099 (/hand = 0.0445475)
+weighted, uncounted expected change: 1.87099 (/hand = 0.0445475)
+unweighted, counted expected change: 1.91658 (/hand = 0.0456328)
+weighted, counted expected change: -0.232542 (/hand = 0.0456328)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
