@@ -905,6 +905,18 @@ current bankroll: 104.5
 hands played: 45
 initial bets: 45
 total bets: 52
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+unweighted, counted expected change: -0.764762 (/hand = -0.0169947)
+weighted, counted expected change: -0.764762 (/hand = -0.0169947)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 0.138669 (/hand = 0.00308153)
+weighted, uncounted expected change: 0.138669 (/hand = 0.00308153)
+unweighted, counted expected change: -0.499296 (/hand = -0.0110955)
+weighted, counted expected change: -0.764762 (/hand = -0.0110955)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
