@@ -957,6 +957,18 @@ current bankroll: 99
 hands played: 45
 initial bets: 45
 total bets: 50
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+unweighted, counted expected change: -0.818571 (/hand = -0.0181905)
+weighted, counted expected change: -0.818571 (/hand = -0.0181905)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 0.875381 (/hand = 0.0194529)
+weighted, uncounted expected change: 0.875381 (/hand = 0.0194529)
+unweighted, counted expected change: 0.750137 (/hand = 0.0166697)
+weighted, counted expected change: -0.818571 (/hand = 0.0166697)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
