@@ -969,6 +969,18 @@ current bankroll: 106.5
 hands played: 46
 initial bets: 46
 total bets: 50
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+unweighted, counted expected change: -1.70489 (/hand = -0.0370629)
+weighted, counted expected change: -1.70489 (/hand = -0.0370629)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 3.72429 (/hand = 0.0809628)
+weighted, uncounted expected change: 3.72429 (/hand = 0.0809628)
+unweighted, counted expected change: 3.30045 (/hand = 0.0717488)
+weighted, counted expected change: -1.70489 (/hand = 0.0717488)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
