@@ -957,6 +957,18 @@ current bankroll: 111
 hands played: 45
 initial bets: 45
 total bets: 47
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+unweighted, counted expected change: -1.06892 (/hand = -0.0237539)
+weighted, counted expected change: -1.06892 (/hand = -0.0237539)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: -0.313642 (/hand = -0.00696982)
+weighted, uncounted expected change: -0.313642 (/hand = -0.00696982)
+unweighted, counted expected change: -0.949278 (/hand = -0.0210951)
+weighted, counted expected change: -1.06892 (/hand = -0.0210951)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
