@@ -961,6 +961,18 @@ current bankroll: 99
 hands played: 48
 initial bets: 48
 total bets: 50
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.630861 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.630861 (/hand = -0.0131429)
+unweighted, counted expected change: -1.3721 (/hand = -0.0285855)
+weighted, counted expected change: -1.3721 (/hand = -0.0285855)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 5.33506 (/hand = 0.111147)
+weighted, uncounted expected change: 5.33506 (/hand = 0.111147)
+unweighted, counted expected change: 4.84757 (/hand = 0.100991)
+weighted, counted expected change: -1.3721 (/hand = 0.100991)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
