@@ -1033,6 +1033,18 @@ current bankroll: 98
 hands played: 46
 initial bets: 46
 total bets: 52
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.604575 (/hand = -0.0131429)
+unweighted, counted expected change: -0.259852 (/hand = -0.00564897)
+weighted, counted expected change: -0.259852 (/hand = -0.00564897)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 2.48795 (/hand = 0.0540858)
+weighted, uncounted expected change: 2.48795 (/hand = 0.0540858)
+unweighted, counted expected change: 3.08721 (/hand = 0.0671132)
+weighted, counted expected change: -0.259852 (/hand = 0.0671132)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
