@@ -970,6 +970,18 @@ current bankroll: 96.5
 hands played: 47
 initial bets: 47
 total bets: 51
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.617718 (/hand = -0.0131429)
+unweighted, counted expected change: -1.3559 (/hand = -0.028849)
+weighted, counted expected change: -1.3559 (/hand = -0.028849)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.43522 (/hand = 0.0305366)
+weighted, uncounted expected change: 1.43522 (/hand = 0.0305366)
+unweighted, counted expected change: 1.49899 (/hand = 0.0318935)
+weighted, counted expected change: -1.3559 (/hand = 0.0318935)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
