@@ -953,6 +953,18 @@ current bankroll: 91
 hands played: 45
 initial bets: 45
 total bets: 52
+Edges before each hand dealt (a priori): {
+unweighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+weighted, uncounted expected change: -0.591432 (/hand = -0.0131429)
+unweighted, counted expected change: -0.434273 (/hand = -0.0096505)
+weighted, counted expected change: -0.434273 (/hand = -0.0096505)
+}
+Edges after each hand dealt (a posteriori): {
+unweighted, uncounted expected change: 1.15619 (/hand = 0.025693)
+weighted, uncounted expected change: 1.15619 (/hand = 0.025693)
+unweighted, counted expected change: 1.41847 (/hand = 0.0315215)
+weighted, counted expected change: -0.434273 (/hand = 0.0315215)
+}
 initial deal histogram: {
 	P\D	   2   3   4   5   6   7   8   9   T   A	total
 	0	   0   0   0   0   0   0   0   0   0   0	0
